Spacing fixes

--- a/front-end/Assets/src/css/modules/_helixnew.scss
+++ b/front-end/Assets/src/css/modules/_helixnew.scss
@@ -57,16 +57,18 @@
 			padding: 1rem;
 		}
 		.content{
+			padding-top: 2rem;
+			@media (max-width: 640px) {
+				padding-top: 10px;
+			}
 			@media (min-width: 640px) {
 				width: 70%; 
 				padding-left:15%;
-			}							
-			padding-top: 2rem;
-			@media (min-width: 640px) {
 				padding-top: 1rem;
-			}
+			}								
 			.block-title{
 				font-size: 2.3rem;
+				margin-bottom: 0;
 				@media (max-width: $tablet) {
 					font-size: 1.8rem;
 				}
@@ -91,12 +93,14 @@
 			.lineEnd{
 				display: inline-block;
 			}
-			&:last-child .block-title{
-				@media (max-width: $tablet) {
-					padding-top: 2rem;
-					margin-bottom: 0;
-				}				
-			}
+			&:last-child{
+				
+				.block-text{
+					@media (min-width: $break-md) {
+						margin-bottom: 0;
+					}					
+				}
+			} 
 		}
 	}
 // Welcome Section Ends	
